<resources>
    <string name="app_name">悟空机器人</string>
    <string name="alpha_mini">我的悟空</string>
    <string name="wu_kong">悟空</string>
    <string name="wu_kong_robot">悟空机器人</string>
    <string name="copyright">2018 Ubtech Robotics Corp. All rights reserved.</string>
    <string name="nice_to_meet_you">很高兴 遇到你</string>
    <string name="robot">机器人</string>
    <string name="coding">编程探险</string>
    <string name="me">我</string>
    <string name="birthday">生日</string>
    <string name="pet_phrase">口头禅</string>
    <string name="representative_action">代表动作</string>
    <string name="strategy">攻略</string>
    <string name="share">共享</string>
    <string name="robot_share">机器人共享</string>
    <string name="setting">设置</string>
    <string name="robot_setting">机器人设置</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="logout">退出登录</string>
    <string name="logout_tips">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="serial_number">序列号:</string>
    <string name="bind_mini_please">请绑定机器人</string>
    <string name="bind_mini_please_content">绑定悟空机器人后可以使用各项技能</string>
    <string name="robot_connect_fail">机器人连接失败</string>
    <string name="robot_connecting">机器人正在连接...</string>
    <string name="robot_connect_success">机器人连接成功</string>
    <string name="start_binding">开始绑定</string>
    <string name="retry">重试</string>
    <string name="avatar_offline">悟空机器人不在线，不能使用视频监控模式哦</string>
    <string name="avatar_lowpower">悟空电量过低，无法进行视频监控</string>
    <string name="base_skill">基本技能</string>
    <string name="video_surveillance">视频监控</string>
    <string name="read_gallery">查看相册</string>
    <string name="notify">提醒</string>
    <string name="home_freind">交朋友</string>
    <string name="gallery">相册</string>
    <string name="contact">通讯录</string>
    <string name="has_not_permission">你没有使用%1$s的权限</string>
    <string name="concat_for_permission">请联系%1$s为你开放权限</string>
    <string name="permission_open">%1$s已经向你开放了%2$s使用权限</string>
    <string name="permission_close">%1$s已经关闭了你%2$s的使用权限</string>
    <string name="already_request_permission">您已经申请过权限，请等待对方同意</string>
    <string name="my_robot">我的机器人</string>
    <string name="message">消息</string>
    <string name="qqmusicmember">QQ音乐会员</string>
    <string name="no_shrea_message">没有共享消息</string>
    <string name="account_security">账号与安全</string>
    <string name="accept_time">%s   接受邀请</string>
    <string name="suggestion">意见反馈</string>
    <string name="about">关于</string>
    <string name="robot_show">机器人演示</string>
    <string name="member_des">你购买的QQ音乐会员仅供\n以下机器人使用，请确认：</string>
    <string name="member_already_receive">QQ音乐会员已被领取！</string>
    <string name="not_binded">未绑定</string>
    <string name="zhi">只</string>
    <string name="system_msg">系统公告</string>
    <string name="loading">加载中</string>
    <string name="wait_a_moment">稍等片刻，马上就好</string>
    <string name="try_again">服务器秀逗了，点击重试</string>
    <string name="not_data">暂无内容</string>
    <string name="not_message">没有公告</string>
    <string name="simple_message_cancel">取消</string>
    <string name="simple_message_comfire">确认</string>
    <string name="error_unknown_error">未知错误</string>
    <string name="error_message_1">token验证错误</string>
    <string name="error_message_100">无效的请求头</string>
    <string name="error_message_101">参数错误</string>
    <string name="error_message_1001">不能发送重复的邀请</string>
    <string name="error_message_1002">发送短信失败</string>
    <string name="error_message_1003">该设备已解绑</string>
    <string name="error_message_1004">机器人序列号不存在</string>
    <string name="error_message_1005">不能重复绑定机器人</string>
    <string name="error_message_1006">该机器人已被其他用户绑定</string>
    <string name="error_message_1007">不能重复授权</string>
    <string name="error_message_1008">该机器人不存在或未被关联</string>
    <string name="error_message_102">该手机已被注册</string>
    <string name="error_message_104">输入的验证码有误</string>
    <string name="error_message_105">获取验证码过于频繁</string>
    <string name="error_message_201">用户名或密码不正确</string>
    <string name="error_message_2001">用户未注册</string>
    <string name="error_message_2002">用户不存在</string>
    <string name="error_message_2003">手机已经绑定其他用户</string>
    <string name="error_message_2004">邮箱已经绑定其他用户</string>
    <string name="error_message_3001">该动作不存在</string>
    <string name="error_message_4001">包含了敏感字符</string>
    <string name="error_message_4002">不能重复收藏</string>
    <string name="error_message_500">服务器异常，请稍后再试</string>
    <string name="error_message_550">业务异常，请稍后再试</string>
    <string name="error_message_750">非法参数</string>
    <string name="error_message_751">参数不能为空</string>
    <string name="crash_hint">很抱歉,程序出现异常,即将退出</string>
    <string name="unknown">未知</string>
    <string name="temp_power">未知</string>
    <string name="temp_date">2017年9月10日</string>
    <string name="temp_pet_phrase">啊哈哈哈哈哈哈</string>
    <string name="temp_pet_action">斗鸡眼</string>
    <string name="open_power_tip">请按住电源键3秒\n等待悟空机器人站起来</string>
    <string name="alpha_mini_stand_up">悟空机器人已站起</string>
    <string name="next_step">下一步</string>
    <string name="cancle_share">取消共享</string>
    <string name="permission_message_hint">你没有权限使用%1$s,请联系%2$s开通</string>
    <string name="share_no_user_hint">共享后，其他用户也能使用悟空</string>
    <string name="auto_connent_no_response">没反应？手动连接机器人</string>
    <string name="bluetooth_opened">蓝牙已开启</string>
    <string name="open_bluetooth">打开蓝牙</string>
    <string name="allow_location_info">允许悟空机器人获取位置信息</string>
    <string name="authorized_location_info">已授权悟空机器人获取位置信息</string>
    <string name="connect_bluetooth_tips">查看条形码下方的序列号后\n从以下列表选择匹配的序列号</string>
    <string name="bindstart_tips">绑定后，即可与悟空玩耍</string>
    <string name="bind">去绑定</string>
    <string name="unbind">解绑</string>
    <string name="open">打开</string>
    <string name="unbind_title">请选择一个管理员</string>
    <string name="unbind_message">若放弃选择，其他用户其他用户将自动解除绑定，无法使用机器人</string>
    <string name="unbind_opreation">放弃选择，直接解绑</string>
    <string name="unbind_simple_title">确定解绑机器人吗？</string>
    <string name="unbind_simple_message">解绑后，你将失去机器人的控制权</string>
    <string name="unbind_slave_success">已取消%1$s共享权限</string>
    <string name="searching_bluetooth_dialog_title_norobot">没有感知到悟空机器人</string>
    <string name="searching_bluetooth_tips">正在搜索附近的悟空机器人...</string>
    <string name="searching_bluetooth_tips_norobot">没有找到悟空机器人</string>
    <string name="searching_bluetooth_help_tips">帮助</string>
    <string name="searching_bluetooth_retry_find_tips">重新搜索</string>
    <string name="searching_bluetooth_call">拨打客服</string>
    <string name="searching_bluetooth_help_message">1、请确认机器人电源已打开;</string>
    <string name="searching_bluetooth_help_message_1">2、请让手机靠近机器人;</string>
    <string name="searching_bluetooth_help_message_2">3、如果仍然没有反应，请尝试点击页面下方的手动连接机器人。</string>
    <string name="searching_bluetooth_help_message_3">3、如果仍然没有搜索到悟空机器人，请联系客服：400-6666-700。</string>
    <string name="request_control_right_hint">你可以向%1$s申请共享悟空机器人</string>
    <string name="request_send_control_right_tips">发送共享申请</string>
    <string name="request_sended_control_right_tips">申请发送成功</string>
    <string name="request_right_title_tips">悟空机器人已被%1$s绑定</string>
    <string name="router_mainpage">进入首页</string>
    <string name="ble_location_info">蓝牙与位置信息</string>
    <string name="open_ble_buletooth_tips">请打开蓝牙开关，并允许悟空机器人获取你的位置信息，以便其进行网络连接</string>
    <string name="please_close_to_the_alpha_mini">请将手机靠近悟空机器人</string>
    <string name="no_response">手动连接机器人</string>
    <string name="more_close">再靠近一点</string>
    <string name="please_choose_wifi">请选择Wi-Fi</string>
    <string name="please_input_wifi_pwd">请输入Wi-Fi密码</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="choose_other_wifi">选择其他Wi-Fi</string>
    <string name="complate">完成</string>
    <string name="connecting">连网中...</string>
    <string name="no_find_wifi">没有找到WiFi</string>
    <string name="album_no_photo">没有照片</string>
    <string name="album_no_photo_hint_msg">没有新的照片更新</string>
    <string name="common_select_all">全选</string>
    <string name="surveillance_save">保存</string>
    <string name="permissions_cellphone_albums_title">相册权限</string>
    <string name="permissions_cellphone_albums_dialogue">相册权限</string>
    <string name="permissions_cellphone_bluetooth_title">蓝牙权限</string>
    <string name="permissions_cellphone_bluetooth_dialogue">蓝牙权限</string>
    <string name="share_dialog">悟空机器人想要打开%1$s</string>
    <string name="bluetooth_pairing">蓝牙配对成功</string>
    <string name="network_mobile">正在使用移动网络</string>
    <string name="network_mobile_message">下载将消耗你的2G/3G/4G流量，确定下载吗？</string>
    <string name="common_button_settings">设置</string>
    <string name="common_btn_not_allow">禁止</string>
    <string name="no_network_toast">没有网络</string>
    <string name="common_deselect_all">取消全选</string>
    <string name="album_save">保存照片</string>
    <string name="delete_pic">删除照片</string>
    <string name="common_btn_save">保存</string>
    <string name="common_btn_share">分享</string>
    <string name="origin_size">原图 (%1$s)</string>
    <string name="thumb_size">缩略图 (%1$s)</string>
    <string name="btn_get_origin">查看原图(%1$s)</string>
    <string name="btn_get_origin_progress">    %1$s％    </string>
    <string name="confirm">确定</string>
    <string name="common_btn_cancel">取消</string>
    <string name="album_delete_all">全部删除</string>
    <string name="album_delete_one">删除</string>
    <string name="album_delete_phototips">删除%1$d张照片</string>
    <string name="album_update">已更新%1$d张照片</string>
    <string name="album_show_failed">加载失败,点击重试</string>
    <string name="album_dowand_count">正在下载%1$d/%2$d</string>
    <string name="common_button_delete">删除</string>
    <string name="error_message_network_error">网络异常</string>
    <string name="common_btn_allow_access">允许</string>
    <string name="network_disconnect">网络未连接</string>
    <string name="network_loadding">加载中……</string>
    <string name="network_load_fail">加载失败</string>
    <string name="network_no_robot">没有共享给其他人</string>
    <string name="network_unavaliable">手机无网络连接</string>
    <string name="network_unavaliable_album">手机无网络</string>
    <string name="add_share">＋ 添加共享用户</string>
    <string name="add_new_alphamini">绑定新悟空机器人</string>
    <string name="bind_new_alphamini">绑定新悟空机器人</string>
    <string name="bangding_fialed">绑定失败</string>
    <string name="robot_wifi_unable_msg">机器人无网络连接，请更换其他Wi-Fi网络</string>
    <string name="phone_network_error_msg">手机无法连接网络，无法完成绑定</string>
    <string name="change_wifi">更换WiFi</string>
    <string name="please_try_again">重试</string>
    <string name="net_work_error">网络不给力，请稍后重试</string>
    <string name="i_know">我知道了</string>
    <string name="send_apply_share_msg">发送共享申请</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="car_help">帮助</string>
    <string name="how_to_control_car">如何控制小车?</string>
    <string name="move_back">前进后退</string>
    <string name="control_direction">左右转动手机,控制坐骑方向</string>
    <string name="how_exit_drive">如何退出开车模式</string>
    <string name="exit_drive">对悟空说:“悟空,悟空,退出开车模式。”或者点击APP上角的返回按钮</string>
    <string name="see_the_demo">查看动画演示</string>
    <string name="see_all_cmd">查看全部语音指令</string>
    <string name="app_conmunication_title_content">开启后，悟空若感知到有人靠近，可能会打开摄像头进行人脸识别，并主动交流。</string>
    <string name="app_conmunication_sub_title">该功能需要收集并上传图像数据至腾讯叮当，用以以下服务:</string>
    <string name="app_conmunication_item_face_detect">·人脸检测</string>
    <string name="app_conmunication_item_face_trace">·人脸追踪</string>
    <string name="app_conmunication_item_face_recongnize">·人脸识别</string>
    <string name="app_conmunication_item_detect">我们和腾讯叮当承诺将按照《隐私协议》的许可范围来处理使用该图像数据。</string>
    <string name="app_conmunication_close_hint">开启后，你仍可以通过遮盖摄像头保护盖来保护隐私。</string>
    <string name="app_conmunication_no_more">不再提醒</string>
    <string name="app_conmunication_warm_hint">温馨提示</string>
</resources>