<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:minWidth="300dp">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/first_text"
            android:text="@string/unbind_title" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/unbind_message" />

    </LinearLayout>

    <include layout="@layout/line_h_view"/>

    <ListView
        android:id="@+id/lv_bind"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="1px"
        android:divider="@color/border"
        android:scrollbars="none"/>

    <LinearLayout
        android:id="@+id/ll_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <include layout="@layout/line_h_view" />

        <TextView
            android:id="@+id/tv_comfire"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/simple_message_comfire" />

        <include layout="@layout/line_h_view" />

        <TextView
            android:id="@+id/tv_unbind"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/unbind_opreation" />

        <include layout="@layout/line_h_view" />


        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/simple_message_cancel" />

    </LinearLayout>
</LinearLayout>
