<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_19"
        android:layout_centerHorizontal="true"
        android:text="@string/car_help"
        android:textSize="@dimen/standard_text_size_18dp_t1"
        android:textColor="@color/color_000000"
        />
    <ImageView
        android:id="@+id/iv_carhelp_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dimen_19"
        android:layout_marginRight="@dimen/dimen_19"
        android:src="@drawable/ic_top_cancel"
        />
    <TextView
        android:id="@+id/tv_carhelp_how_to_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_control_car"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/standard_text_size_15dp_t4"
        android:layout_marginTop="@dimen/dimen_55"
        android:layout_marginLeft="@dimen/dimen_14"
        />
    <ImageView
        android:id="@+id/iv_carhelp_img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_14"
        android:layout_below="@+id/tv_carhelp_how_to_control"
        android:layout_marginTop="@dimen/dimen_13"
        android:src="@drawable/car_help_img_1"
        />
    <TextView
        android:id="@+id/tv_carhelp_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_back"
        android:layout_below="@+id/iv_carhelp_img1"
        android:layout_marginTop="@dimen/dimen_6"
        android:layout_marginLeft="@dimen/dimen_42"
        android:textSize="@dimen/standard_text_size_12dp_t7"
        android:textColor="@color/color_A2A2A2"
        />
    <ImageView
        android:id="@+id/iv_carhelp_img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/car_help_img_2"
        android:layout_alignTop="@+id/iv_carhelp_img1"
        android:layout_toRightOf="@+id/iv_carhelp_img1"
        android:layout_marginRight="@dimen/dimen_17"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_carhelp_img2"
        android:layout_toRightOf="@+id/tv_carhelp_text1"
        android:text="@string/control_direction"
        android:textSize="@dimen/standard_text_size_12dp_t7"
        android:textColor="@color/color_A2A2A2"
        android:layout_marginLeft="@dimen/dimen_84"
        android:layout_marginTop="@dimen/dimen_6"
        />
    <TextView
        android:id="@+id/tv_carhelp_exitdrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_carhelp_text1"
        android:layout_marginTop="@dimen/dimen_43"
        android:layout_marginLeft="@dimen/dimen_14"
        android:text="@string/how_exit_drive"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/standard_text_size_15dp_t4"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_carhelp_exitdrive"
        android:layout_marginLeft="@dimen/dimen_14"
        android:layout_marginTop="@dimen/dimen_8"
        android:text="@string/exit_drive"
        android:textSize="@dimen/standard_text_size_13dp_t6"
        />
    <TextView
        android:id="@+id/tv_carhelp_see_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_the_demo"
        android:textSize="@dimen/standard_text_size_13dp_t6"
        android:textColor="@color/color_0BA3FF"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dimen_122"
        android:layout_marginRight="@dimen/dimen_78"
        android:background="@drawable/carlist_item_bg"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/tv_carhelp_voice_cmd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all_cmd"
        android:textSize="@dimen/standard_text_size_13dp_t6"
        android:textColor="@color/color_0BA3FF"
        android:layout_below="@+id/tv_carhelp_see_demo"
        android:layout_marginTop="@dimen/dimen_120"
        android:layout_marginRight="@dimen/dimen_78"
        android:layout_alignLeft="@+id/tv_carhelp_see_demo"
        android:background="@drawable/carlist_item_bg"
        android:gravity="center"
        />
</RelativeLayout>
