<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/back_btn"
        style="@style/BackButtonStyle" />

    <ImageView
        android:id="@+id/ble_location_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/img_bluetooth_for_android" />

    <TextView
        android:id="@+id/ble_location_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ble_location_iv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/ble_location_info"
        android:textColor="@color/first_text"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/location_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ble_location_tv"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="@string/open_ble_buletooth_tips"
        android:textColor="@color/text_gray"
        android:textSize="15sp" />


    <FrameLayout
        android:id="@+id/allow_bluetooth_fl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp">

        <TextView
            android:id="@+id/allow_bluetooth_btn"
            style="@style/BlueBtnStyle"
            android:layout_centerHorizontal="true"
            android:text="@string/open_bluetooth"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/allow_bluetooth_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_top_confirm_p"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/bluetooth_opened"
            android:textColor="@color/first_text"
            android:textSize="15sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/allow_bluetooth_fl"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/allow_location_btn"
            style="@style/BlueBtnStyle"
            android:text="@string/allow_location_info"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/allow_location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_top_confirm_p"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/authorized_location_info"
            android:textColor="@color/first_text"
            android:textSize="15sp" />
    </FrameLayout>
</RelativeLayout>